--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <section class="logo">
         <img class="img" src="./img/favicon.png" alt="Logo de Adacats" />
         <h1>AdaKitten</h1>
-        <nav class="menu-nav">
+        <nav class="menu-nav button-js">
           <ul class="menu">
             <li class="item">
-              <span class="fas fa-plus-circle"> </span>
+              <span class="fas fa-plus-circle "> </span>
             </li>
           </ul>
         </nav>
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-      <section class="new-form collapsed">
+      <section class="new-form js-new-form collapsed">
         <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
         <form class="form">
           <input
