--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <input class="input" type="text" placeholder="Raza" />
           <input class="input" type="text" placeholder="Descripción" required />
           <label class=""></label>
-          <button class="button">Añadir</button>
+          <button class="button ">Añadir</button>
           <button class="button-cancel">Cancelar</button>
         </form>
       </section>
@@ -63,16 +63,19 @@
       <section class="search">
         <h2 class="title">Filtrar / Buscar</h2>
         <form class="form">
-          <input class="input" type="text" placeholder="Descripción" />
+          <input class="input js_in_search_desc" type="text" placeholder="Descripción"  value="" />
+
           <input
-            class="input"
+            class="input search-raza"
             type="select"
             name="raza"
             placeholder="Raza"
             id="raza"
+            value=""
+           
           />
 
-          <button class="button">Buscar</button>
+          <button class="button js-button">Buscar</button>
         </form>
       </section>
 
