--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <section class="logo">
         <img class="img" src="./img/favicon.png" alt="Logo de Adacats" />
         <h1>AdaKitten</h1>
-        <nav class="menu-nav button-js">
+        <nav class="menu-nav ">
           <ul class="menu">
             <li class="item">
-              <span class="fas fa-plus-circle "> </span>
+              <span class="fas fa-plus-circle button-js"> </span>
             </li>
           </ul>
         </nav>
@@ -37,9 +37,9 @@
     </header>
 
     <main>
-      <section class="new-form js-new-form collapsed">
+      <section class="new-form js-new-form ">
         <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
-        <form class="form">
+        <form class="form ">
           <input
             class="input"
             type="text"
