--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="logo">
         <img class="img" src="./img/favicon.png" alt="Logo de Adacats" />
         <h1>AdaKitten</h1>
-        <nav class="menu-nav ">
+        <nav class="menu-nav">
           <ul class="menu">
             <li class="item">
               <span class="fas fa-plus-circle button-js"> </span>
@@ -37,9 +37,9 @@
     </header>
 
     <main>
-      <section class="new-form js-new-form ">
+      <section class="new-form js-new-form">
         <h2 class="title">¿Agregamos un nuevo gatito a Adalab?</h2>
-        <form class="form ">
+        <form class="form">
           <input
             class="input"
             type="text"
@@ -50,7 +50,7 @@
           <input class="input" type="text" placeholder="Raza" />
           <input class="input" type="text" placeholder="Descripción" required />
           <label class=""></label>
-          <button class="button ">Añadir</button>
+          <button class="button">Añadir</button>
           <button class="button-cancel">Cancelar</button>
         </form>
       </section>
@@ -63,16 +63,20 @@
       <section class="search">
         <h2 class="title">Filtrar / Buscar</h2>
         <form class="form">
-          <input class="input js_in_search_desc" type="text" placeholder="Descripción"  value="" />
+          <input
+            class="input js_in_search_desc"
+            type="text"
+            placeholder="Descripción"
+            value=""
+          />
 
           <input
-            class="input search-raza"
+            class="input search-raza js-search-race"
             type="select"
             name="raza"
             placeholder="Raza"
             id="raza"
             value=""
-           
           />
 
           <button class="button js-button">Buscar</button>
@@ -80,11 +84,7 @@
       </section>
 
       <section class="data">
-        <ul class="list js-list">
-
-
-
-        </ul>
+        <ul class="list js-list"></ul>
       </section>
     </main>
     <footer class="footer">
